Add site favicon (SnowTubeLunchLogo.png) to index/detail/root

--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
   <meta charset="utf-8">
   <meta http-equiv="refresh" content="0; url=views/index.html">
   <meta name="viewport" content="width=device-width,initial-scale=1">
+  <link rel="icon" href="image/SnowTubeLunchLogo.png" type="image/png">
+  <link rel="apple-touch-icon" href="image/SnowTubeLunchLogo.png">
   <title>Redirecting…</title>
 </head>
 <body>
