Adjust viewport initial-scale to open slightly zoomed-out on mobile

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta http-equiv="refresh" content="0; url=views/index.html">
-  <meta name="viewport" content="width=device-width,initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=0.85, minimum-scale=0.5, maximum-scale=1.0">
   <link rel="icon" href="image/SnowTubeLunchLogo.png" type="image/png">
   <link rel="apple-touch-icon" href="image/SnowTubeLunchLogo.png">
   <title>Redirecting…</title>
