--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <title>Redirecting…</title>
 </head>
 <body>
+  <!-- Mobile background video (hidden on larger screens) -->
+  <video id="bg-video" autoplay muted loop playsinline poster="image/SnowTubeLunch.jpg">
+    <source src="image/SnowTubeLunch.mp4" type="video/mp4">
+  </video>
   <p>Redirecting to <a href="views/index.html">views/index.html</a>. If you are not redirected automatically, click the link.</p>
   <script>window.location.replace('views/index.html');</script>
 </body>
